fixes nav item misalignment for smaller devices

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -88,9 +88,6 @@ body {
       width: 50%;
       padding: .5em;
     }
-    #last-nav-li {
-      width: 100%;
-    }
   }
 }
 
